--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "env-cmd": "^10.1.0",
     "axios": "^1.4.0",
     "browser-image-compression": "^2.0.2",
+    "env-cmd": "^10.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.11.2",
-    "yup": "^1.2.0",
-    "@hookform/resolvers": "^3.1.0"
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
