--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
     "@mui/styles": "^5.13.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "env-cmd": "^10.1.0",
+    "@mui/x-date-pickers": "^6.9.1",
     "axios": "^1.4.0",
     "browser-image-compression": "^2.0.2",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
+    "env-cmd": "^10.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.11.2",
