--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "env-cmd -f ./environments/.env vite",
+    "prod": "env-cmd -f ./environments/.prod.env vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -30,7 +31,10 @@
     "react-router-dom": "^6.11.2",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "@tanstack/react-query": "^4.29.14",
+    "@tanstack/react-query-devtools": "^4.29.14"
+
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
