--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://praveensumathi.github.io/Sindhus-Kitchen-Portal",
   "scripts": {
     "dev": "env-cmd -f ./environments/.env vite",
     "prod": "env-cmd -f ./environments/.prod.env vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -19,6 +22,8 @@
     "@mui/material": "^5.14.14",
     "@mui/styles": "^5.13.2",
     "@mui/x-date-pickers": "^6.9.1",
+    "@tanstack/react-query": "^4.29.14",
+    "@tanstack/react-query-devtools": "^4.29.14",
     "axios": "^1.4.0",
     "browser-image-compression": "^2.0.2",
     "date-fns": "^2.30.0",
@@ -31,10 +36,7 @@
     "react-router-dom": "^6.11.2",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "yup": "^1.2.0",
-    "@tanstack/react-query": "^4.29.14",
-    "@tanstack/react-query-devtools": "^4.29.14"
-
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -45,6 +47,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^6.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
