--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@mui/material": "^5.14.14",
     "@mui/styles": "^5.13.2",
     "@mui/x-date-pickers": "^6.9.1",
+    "@tanstack/react-query": "^4.29.14",
+    "@tanstack/react-query-devtools": "^4.29.14",
     "axios": "^1.4.0",
     "browser-image-compression": "^2.0.2",
     "date-fns": "^2.30.0",
@@ -28,13 +30,11 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.11.2",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "yup": "^1.2.0",
-    "@tanstack/react-query": "^4.29.14",
-    "@tanstack/react-query-devtools": "^4.29.14"
-
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
