added code for prod setup

--- a/package.json
+++ b/package.json
@@ -3,15 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://praveensumathi.github.io/Sindhus-Kitchen-Portal",
   "scripts": {
     "dev": "env-cmd -f ./environments/.env vite",
     "prod": "env-cmd -f ./environments/.prod.env vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
