--- a/environments/.env
+++ b/environments/.env
@@ -1,3 +1,3 @@
 VITE_AXIOS_BASE_URL = "http://localhost:3000/"
 
-VITE_SINDHUS_WHATSAPP = 'https://wa.me/+1 9402792536'
+VITE_SINDHUS_WHATSAPP = 'https://wa.me/19402792536'
