--- a/environments/.prod.env
+++ b/environments/.prod.env
@@ -1,3 +1,3 @@
 VITE_AXIOS_BASE_URL = "https://api.sindhuskitchen.com/"
 
-VITE_SINDHUS_WHATSAPP = 'https://wa.me/+1 940-279-2536'
+VITE_SINDHUS_WHATSAPP = 'https://wa.me/19402792536'
