--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.5.3",
     "react-lazyload": "^3.2.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.15.0",
